testsuite/tests/grammar/invalid_lkt/invalid_decl.lkt
import lexer_example

grammar foo_grammar {
    grammar unexpected_decl {
    }
}
